--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,7 @@
 @import url(./header.css);
 @import url(./home.css);
 @import url(./about.css); 
+@import url(./skills.css);
 html {
   scroll-behavior: smooth;
 }
