--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,6 +1,7 @@
 #Portfolio {
     padding-top: 91px;
     padding-bottom: 96px;
+    background-color: #F6F6F6;
 }
 
 .portfolio__title {
@@ -37,7 +38,6 @@ margin-bottom: 37px;
     flex-direction: column;
     align-items: center;
     }
-
 
     .a__1 {
         margin-top: 42px;
