--- a/styles/style.css
+++ b/styles/style.css
@@ -3,6 +3,8 @@
 @import url(./about.css); 
 @import url(./skills.css);
 @import url(./portfolio.css);
+@import url(./contacts.css);
+@import url(.//footer.css);
 html {
   scroll-behavior: smooth;
 }
