--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,7 @@
 @import url(./skills.css);
 @import url(./portfolio.css);
 @import url(./contacts.css);
-@import url(.//footer.css);
+@import url(./contacts.css);
 html {
   scroll-behavior: smooth;
 }
