--- a/styles/about.css
+++ b/styles/about.css
@@ -1,24 +1,45 @@
 #about {
-  width: 100%;
   font-family: "Gilroy Bold", Arial, Helvetica, sans-serif;
   background-color: #f6f6f6;
   padding-bottom: 104px;
-  margin-top: 107px;
+  padding-top: 120px;
 }
 
 .about_h2 {
-  width: 156px;
-  padding-top: 91px;
-  padding-bottom: 17px;
+  margin-bottom: 19px;
+  font-size: 34px;
+  line-height: 42px;
+  text-align: center;
 }
 
 .about_p {
-  width: 485px;
+  max-width: 485px;
+  font-family: "Gilroy-Medium", Arial, Helvetica, sans-serif;
+  font-size: 18px;
+  line-height: 22px;
   text-align: center;
+}
+.about_p:nth-child(4) {
+  margin-top: 43px;
+}
+
+.about_p:nth-child(5) {
+  margin-bottom: 43px;
 }
 
 .container__about {
   display: flex;
   align-items: center;
   flex-direction: column;
+}
+
+@media (max-width: 375px) {
+  .container__about {
+    margin: 0 30px;
+  }
+  p {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 }
