--- a/styles/header.css
+++ b/styles/header.css
@@ -13,7 +13,6 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  
 }
 
 .menu_items a {
@@ -33,4 +32,23 @@ hr {
 .menu_items a:hover {
   transition: 0.2s;
   color: #070707;
+}
+
+.menu__burger {
+  display: none;
+}
+@media (max-width: 375px) {
+  nav {
+    border: 0;
+  }
+  .menu {
+    display: none;
+  }
+
+  .menu__burger {
+    display: block;
+    position: fixed;
+    top: 60px;
+    right: 30px;
+  }
 }
