--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,23 +1,8 @@
 #Portfolio {
+  font-family: "Gilroy-Bold", Arial, Helvetica, sans-serif;
   padding-top: 91px;
   padding-bottom: 96px;
   background-color: #f6f6f6;
-}
-
-.portfolio__title {
-  font-family: "Gilroy-Bold", Arial, Helvetica, sans-serif;
-  font-size: 34px;
-  line-height: 42px;
-  letter-spacing: 0em;
-  text-align: center;
-}
-
-a {
-  font-family: "Gilroy-Medium", Arial, Helvetica, sans-serif;
-  font-size: 18px;
-  line-height: 22px;
-  letter-spacing: 0em;
-  text-align: center;
 }
 
 .portfolio__title {
@@ -25,6 +10,13 @@ a {
   line-height: 42px;
   text-align: center;
   margin-bottom: 37px;
+}
+
+a {
+  font-family: "Gilroy-Medium", Arial, Helvetica, sans-serif;
+  font-size: 18px;
+  line-height: 22px;
+  text-align: center;
 }
 
 .img {
@@ -38,16 +30,16 @@ a {
 }
 
 .a__1 {
+  display: block;
   margin-top: 42px;
   margin-bottom: 99px;
+  color: #070707;
+  text-decoration: underline;
 }
 
 .a__2 {
+  display: block;
   margin-top: 43px;
-  margin-bottom: 96px;
-}
-
-.flex_wrap > a:hover {
-  text-decoration: underline;
   color: #070707;
+  text-decoration: underline;
 }
