--- a/styles/style.css
+++ b/styles/style.css
@@ -8,6 +8,7 @@ html {
   scroll-behavior: smooth;
 }
 body {
+  color: #070707;
   background-color: #ffffff;
   font-family: "Gilroy Medium", Arial, Helvetica, sans-serif;
 }
@@ -26,3 +27,4 @@ a {
 img {
   display: block;
   }
+
